<resources>
    <string name="app_name">iCar Asia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Signup</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_number">Update Number</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="account_type">Your account type is</string>
</resources>
